// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Service overview dependencies when data is loaded returns at least one item 1`] = `
Object {
  "errorRate": Object {
    "timeseries": Array [
      Object {
        "x": 1607436720000,
        "y": 0,
      },
      Object {
        "x": 1607436780000,
        "y": 0,
      },
      Object {
        "x": 1607436840000,
        "y": 0,
      },
      Object {
        "x": 1607436900000,
        "y": 0,
      },
      Object {
        "x": 1607436960000,
        "y": 0,
      },
      Object {
        "x": 1607437020000,
        "y": 0,
      },
      Object {
        "x": 1607437080000,
        "y": 0,
      },
      Object {
        "x": 1607437140000,
        "y": 0,
      },
      Object {
        "x": 1607437200000,
        "y": 0,
      },
      Object {
        "x": 1607437260000,
        "y": 0,
      },
      Object {
        "x": 1607437320000,
        "y": 0,
      },
      Object {
        "x": 1607437380000,
        "y": 0,
      },
      Object {
        "x": 1607437440000,
        "y": 0,
      },
      Object {
        "x": 1607437500000,
        "y": 0,
      },
      Object {
        "x": 1607437560000,
        "y": 0,
      },
      Object {
        "x": 1607437620000,
        "y": 0,
      },
    ],
    "value": 0,
  },
  "impact": 2.37724265214801,
  "latency": Object {
    "timeseries": Array [
      Object {
        "x": 1607436720000,
        "y": 1344.68,
      },
      Object {
        "x": 1607436780000,
        "y": 731.439024390244,
      },
      Object {
        "x": 1607436840000,
        "y": 945.684210526316,
      },
      Object {
        "x": 1607436900000,
        "y": 1187.1914893617,
      },
      Object {
        "x": 1607436960000,
        "y": 884.705882352941,
      },
      Object {
        "x": 1607437020000,
        "y": 839.604651162791,
      },
      Object {
        "x": 1607437080000,
        "y": 1518.38636363636,
      },
      Object {
        "x": 1607437140000,
        "y": 930.9,
      },
      Object {
        "x": 1607437200000,
        "y": 868.230769230769,
      },
      Object {
        "x": 1607437260000,
        "y": 892.842105263158,
      },
      Object {
        "x": 1607437320000,
        "y": 995.021739130435,
      },
      Object {
        "x": 1607437380000,
        "y": 3405.75,
      },
      Object {
        "x": 1607437440000,
        "y": 976.102564102564,
      },
      Object {
        "x": 1607437500000,
        "y": 1167.9,
      },
      Object {
        "x": 1607437560000,
        "y": 839.463414634146,
      },
      Object {
        "x": 1607437620000,
        "y": 775.857142857143,
      },
    ],
    "value": 1135.15508885299,
  },
  "name": "redis",
  "spanSubtype": "redis",
  "spanType": "db",
  "throughput": Object {
    "timeseries": Array [
      Object {
        "x": 1607436720000,
        "y": 1.66666666666667,
      },
      Object {
        "x": 1607436780000,
        "y": 2.73333333333333,
      },
      Object {
        "x": 1607436840000,
        "y": 2.53333333333333,
      },
      Object {
        "x": 1607436900000,
        "y": 3.13333333333333,
      },
      Object {
        "x": 1607436960000,
        "y": 2.26666666666667,
      },
      Object {
        "x": 1607437020000,
        "y": 2.86666666666667,
      },
      Object {
        "x": 1607437080000,
        "y": 2.93333333333333,
      },
      Object {
        "x": 1607437140000,
        "y": 2.66666666666667,
      },
      Object {
        "x": 1607437200000,
        "y": 2.6,
      },
      Object {
        "x": 1607437260000,
        "y": 2.53333333333333,
      },
      Object {
        "x": 1607437320000,
        "y": 3.06666666666667,
      },
      Object {
        "x": 1607437380000,
        "y": 2.4,
      },
      Object {
        "x": 1607437440000,
        "y": 2.6,
      },
      Object {
        "x": 1607437500000,
        "y": 2.66666666666667,
      },
      Object {
        "x": 1607437560000,
        "y": 2.73333333333333,
      },
      Object {
        "x": 1607437620000,
        "y": 1.86666666666667,
      },
    ],
    "value": 41.2666666666667,
  },
  "type": "external",
}
`;

exports[`APM API tests basic no data Service overview dependencies when specific data is loaded returns opbeans-node as a dependency 1`] = `
Object {
  "agentName": "nodejs",
  "environment": "",
  "errorRate": Object {
    "timeseries": Array [
      Object {
        "x": 1607436720000,
        "y": 0.333333333333333,
      },
      Object {
        "x": 1607436780000,
        "y": null,
      },
      Object {
        "x": 1607436840000,
        "y": null,
      },
      Object {
        "x": 1607436900000,
        "y": null,
      },
      Object {
        "x": 1607436960000,
        "y": null,
      },
      Object {
        "x": 1607437020000,
        "y": null,
      },
      Object {
        "x": 1607437080000,
        "y": null,
      },
      Object {
        "x": 1607437140000,
        "y": null,
      },
      Object {
        "x": 1607437200000,
        "y": null,
      },
      Object {
        "x": 1607437260000,
        "y": null,
      },
      Object {
        "x": 1607437320000,
        "y": null,
      },
      Object {
        "x": 1607437380000,
        "y": null,
      },
      Object {
        "x": 1607437440000,
        "y": null,
      },
      Object {
        "x": 1607437500000,
        "y": null,
      },
      Object {
        "x": 1607437560000,
        "y": null,
      },
      Object {
        "x": 1607437620000,
        "y": 0,
      },
    ],
    "value": 0.25,
  },
  "impact": 100,
  "latency": Object {
    "timeseries": Array [
      Object {
        "x": 1607436720000,
        "y": 6.66666666666667,
      },
      Object {
        "x": 1607436780000,
        "y": null,
      },
      Object {
        "x": 1607436840000,
        "y": null,
      },
      Object {
        "x": 1607436900000,
        "y": null,
      },
      Object {
        "x": 1607436960000,
        "y": null,
      },
      Object {
        "x": 1607437020000,
        "y": null,
      },
      Object {
        "x": 1607437080000,
        "y": null,
      },
      Object {
        "x": 1607437140000,
        "y": null,
      },
      Object {
        "x": 1607437200000,
        "y": null,
      },
      Object {
        "x": 1607437260000,
        "y": null,
      },
      Object {
        "x": 1607437320000,
        "y": null,
      },
      Object {
        "x": 1607437380000,
        "y": null,
      },
      Object {
        "x": 1607437440000,
        "y": null,
      },
      Object {
        "x": 1607437500000,
        "y": null,
      },
      Object {
        "x": 1607437560000,
        "y": null,
      },
      Object {
        "x": 1607437620000,
        "y": 1,
      },
    ],
    "value": 5.25,
  },
  "name": "opbeans-node",
  "serviceName": "opbeans-node",
  "throughput": Object {
    "timeseries": Array [
      Object {
        "x": 1607436720000,
        "y": 0.2,
      },
      Object {
        "x": 1607436780000,
        "y": null,
      },
      Object {
        "x": 1607436840000,
        "y": null,
      },
      Object {
        "x": 1607436900000,
        "y": null,
      },
      Object {
        "x": 1607436960000,
        "y": null,
      },
      Object {
        "x": 1607437020000,
        "y": null,
      },
      Object {
        "x": 1607437080000,
        "y": null,
      },
      Object {
        "x": 1607437140000,
        "y": null,
      },
      Object {
        "x": 1607437200000,
        "y": null,
      },
      Object {
        "x": 1607437260000,
        "y": null,
      },
      Object {
        "x": 1607437320000,
        "y": null,
      },
      Object {
        "x": 1607437380000,
        "y": null,
      },
      Object {
        "x": 1607437440000,
        "y": null,
      },
      Object {
        "x": 1607437500000,
        "y": null,
      },
      Object {
        "x": 1607437560000,
        "y": null,
      },
      Object {
        "x": 1607437620000,
        "y": 0.0666666666666667,
      },
    ],
    "value": 0.266666666666667,
  },
  "type": "service",
}
`;
